Fixing  overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -2038,11 +2038,10 @@ label {
 /* line 8, ../sass/modules/_page.scss */
 .page-wrapper {
   position: relative;
-  overflow-x: hidden;
-  height: 100%;
+  overflow: hidden;
   width: 100%;
 }
-/* line 16, ../sass/modules/_page.scss */
+/* line 15, ../sass/modules/_page.scss */
 .page-wrapper.is-moved-left .page-inner {
   -webkit-transform: translate3d(-76%, 0, 0);
   -moz-transform: translate3d(-76%, 0, 0);
@@ -2051,7 +2050,7 @@ label {
   transform: translate3d(-76%, 0, 0);
 }
 
-/* line 22, ../sass/modules/_page.scss */
+/* line 21, ../sass/modules/_page.scss */
 .page-inner {
   position: relative;
   min-height: 100%;
@@ -2063,7 +2062,7 @@ label {
   transition: transform 500ms ease 0s;
 }
 
-/* line 31, ../sass/modules/_page.scss */
+/* line 30, ../sass/modules/_page.scss */
 .page-title {
   font-size: 200%;
   font-weight: bold;
