--- a/sass/modules/_page.scss
+++ b/sass/modules/_page.scss
@@ -7,9 +7,8 @@
 
 .page-wrapper {
   position: relative;
-  overflow-x: hidden;
+  overflow: hidden;
 
-  height: 100%;
   width: 100%;
 
   &.is-moved-left {
